[fix] page overflow

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -27,7 +27,7 @@ $foreground-dark: #ededed;
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 body {
